Fix overflow problem of textarea when code length requires horizontal scrollbar

--- a/gist_hub/assets/css/app.css
+++ b/gist_hub/assets/css/app.css
@@ -85,7 +85,7 @@ form input[type="text"]:focus {
 }
 
 .syntax-area {
-    @apply bg-ghSyntax border text-xs border-white h-auto;
+    @apply bg-ghSyntax border text-xs border-white h-auto overflow-hidden;
     border-top: none;
     border-left: none;
 }
